--- a/style.css
+++ b/style.css
@@ -23,15 +23,21 @@
     height: 130px;
 }
 
-#containerhead ul {
-    list-style-type: none;
-    justify-content: flex-end;
+.menu {
     display: flex;
-    flex-direction: row;
 }
 
-nav li {
-    margin-left: 1.3em;
+.menu a {
+    padding: 1em 2em;
+    margin-right: 1em;
+}
+
+.imageflottante1 {
+    float: left;
+}
+
+#containerhead nav {
+    text-align: right;
 }
 
 h1 {
@@ -370,14 +376,6 @@ header h1 {
     margin-top: 1em;
 }
 
-#containerhead nav {
-    flex: auto;
-}
-
-#containerhead img {
-    height: 30px;
-}
-
 #containerhead a:hover {
     color: #0065FC;
     text-decoration: underline transparent;
@@ -391,13 +389,14 @@ header h1 {
 
 #containerhead {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    flex: wrap;
     flex-direction: row-reverse;
-    margin-bottom: 1em;
+    justify-content: space-between;
+}
+
+#containerhead img {
+    height: 40px;
     margin-left: 4.5em;
-    margin-right: 1em;
-    margin-top: 1em;
 }
 
 body {
