--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
+body {
+    margin: 0;
+}
+
 #conteneur1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 1em;
+    padding: 2em;
+    padding-top: 1em;
 }
 
 .Hébergements {
     background-color: #F2F2F2;
     border-radius: 10px 10px;
     margin: 30px;
-    width: 66%;
-    padding-left: 0.5cm;
-    padding-right: 0.5cm;
+    width: 68%;
     margin-bottom: 1cm;
 }
 
@@ -19,7 +22,7 @@
     border-radius: 20px 20px 0px 0px;
     border: solid white;
     border-color: white;
-    width: 250px;
+    width: 280px;
     height: 130px;
 }
 
@@ -84,7 +87,6 @@ article.hotel1 {
     width: 330px;
     margin: 1em;
     margin-bottom: 1.5em;
-    margin-right: 0.25em;
     text-align: left;
 }
 
@@ -109,11 +111,8 @@ article.hotel i {
 
 .populaires {
     background-color: #F2F2F2;
-    width: 25%;
+    width: 27%;
     border-radius: 10px 10px;
-    margin-right: 0.25em;
-    padding-right: 0.5cm;
-    padding-right: 0.5cm;
     margin-bottom: 2.2em;
     margin-top: 1.9em;
 }
@@ -127,7 +126,8 @@ article.hotel i {
 }
 
 .fa-chart-line {
-    padding-left: 3.4em;
+    padding-right: 1em;
+    float: right;
 }
 
 img {
@@ -142,6 +142,8 @@ footer {
 footer ul {
     list-style-type: none;
     text-align: left;
+    padding-left: 4em;
+    line-height: 1.5em;
 }
 
 #footer {
@@ -156,7 +158,7 @@ footer ul {
 }
 
 .fin h3 {
-    margin-left: 1.6cm;
+    margin-left: 4.5em;
 }
 
 article.hotel h3 {
@@ -172,58 +174,50 @@ article.hotel p {
 }
 
 .Hébergements h2 {
-    margin-left: 0.8em;
+    margin-left: 1.5em;
+    margin-top: 1em;
 }
 
 .populaires h2 {
     margin-left: 1.2em;
-    font-size: 22px;
+    margin-top: 1em;
 }
 
 .afficher {
-    margin-left: 1em;
+    margin-left: 2em;
     margin-bottom: 2em;
     font-weight: bold;
     font-size: 20px;
 }
 
-h1 {
-    margin-left: 4.5em;
-    margin-top: -1em;
-}
 
+}
 header p {
-    margin-left: 7.3em;
+    margin-left: 1.6em;
 }
-
 .recherche {
-    margin-left: 4.5em;
+    margin-left: 1.5em;
 }
-
 .infos {
-    margin-left: 4.5em;
+    margin-left: 2em;
     margin-top: 2em;
 }
-
 .filtre ul {
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    padding-left: 2.5em;
+    padding: 0;
 }
-
 article.Activités {
     background-color: white;
     box-shadow: 1px 1px 12px rgb(212, 211, 211);
     border-radius: 10px;
 }
-
 #block img {
     border-radius: 10px 10px 0px 0px;
     box-shadow: 1px 1px 1px rgb(212, 211, 211);
 }
-
 #block {
     display: flex;
     justify-content: space-between;
@@ -233,33 +227,27 @@ article.Activités {
     margin-bottom: 1em;
     margin-top: 1em;
 }
-
 article.Activités h3 {
     margin: 1em;
     margin-top: 0.5em;
     padding-bottom: 0.5em;
 }
-
 .Diverstisements h2 {
     margin-left: 2.7em;
     margin-top: -1em;
 }
-
 .block2 article {
     margin-bottom: 2em;
     margin-top: 0em;
 }
-
 .block4 article {
     margin-bottom: 2em;
 }
-
 .star {
     margin-left: 0.5em;
     margin-bottom: 0.5em;
     margin-top: -0.5em;
 }
-
 button {
     background-color: #0065FC;
     color: white;
@@ -268,7 +256,6 @@ button {
     width: 105px;
     border-style: none;
 }
-
 #site-search {
     border-left: none;
     border-right: none;
@@ -280,7 +267,6 @@ button {
     border-color: #F2F2F2;
     padding-left: 1em;
 }
-
 .fa-map-marker-alt {
     border-style: solid;
     width: 25px;
@@ -296,7 +282,6 @@ button {
     border-radius: 10px 0px 0px 10px;
     padding-right: 0.3em;
 }
-
 .fa-money-bill-wave {
     color: #0065FC;
     border: solid;
@@ -306,7 +291,6 @@ button {
     padding: 0.4cm;
     margin-top: -0.4em;
 }
-
 .fa-child {
     color: #0065FC;
     border: solid;
@@ -319,7 +303,6 @@ button {
     padding-top: 0.9em;
     margin-top: -0.2em;
 }
-
 .fa-heart {
     color: #0065FC;
     border: solid;
@@ -329,7 +312,6 @@ button {
     padding: 0.4cm;
     margin-top: -0.4em;
 }
-
 .fa-dog {
     color: #0065FC;
     border: solid;
@@ -339,7 +321,6 @@ button {
     padding: 0.9em;
     margin-top: -0.3em;
 }
-
 .filter {
     border: solid;
     border-radius: 50px 50px 50px 50px;
@@ -352,143 +333,228 @@ button {
     margin-left: 1em;
     padding-bottom: -1cm;
 }
-
 strong {
     margin-left: 0.5em;
 }
-
 #choix {
     margin-left: 2em;
 }
-
 #choix h3 {
     font-size: 16px;
     margin-right: 1em;
 }
-
-header p {
-    margin-left: 1.9cm;
-    margin-top: -0.2cm;
-    font-size: 14px;
-}
-
 header h1 {
     margin-top: 1em;
+    margin-left: 1.5em;
+    line-height: 0.5em;
 }
-
+header p {
+    margin-left: 1.5em;
+    line-height: 0.5em;
+}
 #containerhead a:hover {
     color: #0065FC;
     text-decoration: underline transparent;
     border-top: solid;
     padding-top: 1em;
 }
-
 #containerhead a {
     color: black;
 }
-
 #containerhead {
     display: flex;
     flex: wrap;
     flex-direction: row-reverse;
     justify-content: space-between;
+    margin-top: 1em;
 }
-
 #containerhead img {
     height: 40px;
-    margin-left: 4.5em;
+    margin-left: 1.5em;
 }
-
 body {
     font-family: 'Raleway', sans-serif;
 }
-
 strong:hover {
     color: #0065FC;
 }
-
 .fa-search {
     visibility: hidden;
 }
-
 @media screen and (min-width:1024px) and (max-width:1360px) {
     .Hébergements {
-        width: 55%;
+        width: 57%;
+        padding: 0;
     }
+    
     .populaires {
-        width: 30%;
+        width: 35%;
+        padding: 0;
     }
+    
     #conteneur1 img {
         width: 220px;
     }
+    
+    .fa-chart-line {
+        float: right;
+        padding-right: 1.5em;
+    }
+    
+    article.hotel1 {
+        margin-right: 1.4em;
+        margin-top: 1.5em;
+        margin-bottom: 6.5em;
+    }
+    
+    #conteneur1 {
+        padding: 3em;
+        padding-top: 1em;
+    }
+    
+    #block {
+        margin: 2em;
+    }
+    
+    .fin {
+        margin-right: 5em;
+    }
+    
+    .fin h3 {
+        margin-left: 3em;
+    }
+    
+    .Diverstisements h2 {
+        margin-top: 0;
+        margin-left: 1.5em;
+    }
+    
+    .infos {
+        margin-left: 2em;
+    }
+    
+    .filtre ul {
+        padding-left: 0;
+    }
+    
+    .recherche {
+        margin-left: 1.5em;
+    }
+    
+    header p {
+        margin-left: 2em;
+    }
+    
+    header h1 {
+        margin-left: 1.5em;
+    }
+    
+    #containerhead img {
+        margin-left: 1.5em;
+    }
+    
+    footer ul {
+        padding-left: 2.5em;
+    }
+    
+    .Hébergements h2 {
+        margin-left: 2em;
+    }
 }
-
 @media(max-width: 1024px) {
     .Hébergements {
-        width: 50%;
+        width: 57%;
     }
+    
     .populaires {
-        width: 37%;
+        width: 34%;
     }
+    
     #conteneur1 img {
         width: 210px;
         height: 110px;
     }
-    fa-chart-line {
-        padding-left: 4.5em;
+    
+    .fa-chart-line {
+        float: right;
+        padding-right: 1em;
     }
+    
     .populaires h2 {
-        margin-left: 1.5em;
+        margin-left: 1em;
     }
+    
     #block1 img {
         width: 230px;
     }
+    
     .block2 img {
         width: 230px;
     }
+    
     .block3 img {
         width: 230px;
     }
+    
     .block4 img {
         width: 230px;
     }
+    
     #block {
         margin-left: 2em;
-        margin-right: 0em;
+        margin-right: 2em;
     }
+    
     .fin {
         margin-right: 4em;
     }
+    
     .Diverstisements h2 {
         margin-left: 1.5em;
         margin-bottom: 1em;
         margin-top: 1em;
     }
+    
     #containerhead img {
         margin-top: 0.5em;
     }
+    
+    .Hébergements h2 {
+        margin-left: 2em;
+    }
 }
-
 @media(max-width: 980px) {
+    body {
+        margin: 0;
+    }
+    
     #conteneurs {
         flex-direction: column-reverse;
         width: 100%;
         margin-left: initial;
         padding-left: initial;
     }
+    
     .populaires {
         width: 100%;
         padding-bottom: 1em;
+        padding-right: 0;
+        margin-right: 0;
     }
+    
     #conteneur1 {
-        margin-left: 3.5em;
+        margin-left: 3em;
+        padding: 0;
     }
+    
     .Hébergements {
         margin: inherit;
         width: 100%;
         padding-left: inherit;
         background-color: transparent;
+        padding: 0;
     }
+    
     article.hotel1 {
         box-shadow: 1px 1px 12px rgb(212, 211, 211);
         width: 337px;
@@ -496,74 +562,103 @@ strong:hover {
         margin-top: 0.1em;
         margin-bottom: 1em;
     }
+    
     #conteneur1 img {
         width: 325px;
         height: 110px;
     }
+    
     article.hotel {
         margin-right: auto;
         margin-left: 1.4em;
     }
+    
     .Hébergements h2 {
-        margin-left: 3.5em;
+        margin-left: 3em;
     }
+    
     .afficher {
         margin-left: 4em;
     }
+    
     #block {
-        padding-left: 3em;
-        padding-right: 4em;
-        margin-left: 2.8em;
+        padding: 0;
+        margin-left: 3em;
     }
+    
     #block img {
         width: 325px;
         height: 110px;
     }
+    
     #block1 {
-        padding-top: 1em;
-        padding-block-end: 1.5em;
+        padding: 0;
+        margin-left: 1.5em;
     }
+    
+    .block2 {
+        margin-right: 7em;
+    }
+    
+    .block3 {
+        margin-left: 1.5em;
+    }
+    
+    .block4 {
+        margin-right: 7em;
+    }
+    
     footer {
         flex-direction: column;
         width: 100%;
         padding-bottom: 1em;
-        padding-right: 1.5em;
+        padding-right: 0;
         margin-left: auto;
     }
+    
     footer ul {
         margin-left: 1em;
         display: initial;
         flex-direction: column;
     }
+    
     .populaires img {
         width: 140px;
         height: 140px;
     }
+    
     .populaires h2 {
-        margin-left: 3em;
+        margin-left: 3.3em;
         margin-bottom: 1em;
         margin-top: 1em;
     }
+    
     .fa-chart-line {
-        padding-left: 26em;
+        float: right;
+        padding-right: 4em;
     }
+    
     .fin {
-        margin-left: 2em;
-        margin-bottom: 1em
+        margin-left: 4.5em;
+        margin-bottom: 1em;
+        line-height: 1.5em;
     }
+    
     .fin h3 {
         margin-right: 1em;
-        padding-left: 0.8em;
-        margin-left: 0.5em;
+        padding: 0;
+        margin-left: 0em;
         margin-bottom: -0.5em;
         font-size: medium;
     }
+    
     .infos {
         margin-top: 3em;
         margin: inherit;
         margin-top: 2em;
-        padding-left: 2.9em;
+        padding-left: 4.1em;
     }
+    
     .fa-search {
         visibility: visible;
         border: solid;
@@ -573,111 +668,136 @@ strong:hover {
         padding: 1.2em;
         border-radius: 17px;
     }
+    
     button {
         display: none;
     }
+    
     #site-search {
         width: 240px;
         height: 35px;
         border-right: none;
     }
+    
     strong {
         font-size: small;
     }
+    
     .star2 {
         margin-top: 1.5em;
     }
+    
     .Diverstisements {
         width: 100%;
     }
+    
     .Diverstisements h2 {
-        margin-left: 3.5em;
+        margin-left: 3em;
     }
+    
     .filtre ul {
         width: 100%;
+        padding: 0;
     }
+    
     .filter {
         display: list-item;
     }
+    
     .recherche {
         width: 100%;
         padding-bottom: 0.5em;
         padding-top: 1em;
+        margin: 0;
     }
+    
     .fa-map-marker-alt {
         padding-left: 1em;
         padding-bottom: 1.1em;
         padding-top: 0.6em;
-        margin-left: -1.5em;
+        margin-left: 3.9em;
         padding-right: 0.1em;
         border-radius: 12px 0px 0px 12px;
     }
+    
     header {
         width: 100%;
     }
+    
     header h1 {
         margin-left: 3em;
         padding-right: 1em;
         font-size: larger;
     }
+    
     header p {
-        margin-left: 4em;
+        margin-left: 4.2em;
     }
+    
     #choix h3 {
-        margin-left: 1em;
+        margin-left: 2.1em;
     }
-    #containerhead {
-        margin-left: 3.5em;
-    }
+    
     #containerhead img {
         margin-top: 0.5em;
+        margin-left: 3.5em;
     }
 }
-
 @media(max-width: 768px) {
     #conteneur1 img {
         width: 300px;
     }
+    
     #conteneur1 {
         margin-left: 0;
     }
+    
     .fa-chart-line {
         padding: 0;
         float: right;
     }
+    
     #block {
         justify-content: center;
     }
+    
     nav.home {
         width: 50%;
     }
+    
     .populaires {
         padding: 0;
     }
+    
     body {
         margin: 0;
     }
+    
     footer {
         padding: 0;
     }
+    
     .filtre ul {
         padding: 0;
     }
+    
     .recherche {
         margin: 0;
     }
+    
     .fa-map-marker-alt {
         margin-left: 2.5em;
     }
+    
     .Hébergements {
         padding: 0;
     }
+    
     article.hotel1 {
         margin-left: 0.5em;
         margin-right: 0.5em;
     }
 }
-
 @media(max-width: 480px) {
     #containerhead {
         width: 100%;
@@ -689,20 +809,24 @@ strong:hover {
         padding-bottom: 2em;
         border-bottom: 3px solid #F2F2F2;
     }
+    
     #containerhead ul {
         flex-wrap: wrap-reverse;
     }
+    
     header img {
         width: 20%;
         position: absolute;
         left: 1em;
         top: 1.5em;
     }
+    
     .register {
         position: relative;
         bottom: 1em;
         right: 2em;
     }
+    
     .home {
         font-size: medium;
         position: absolute;
@@ -710,6 +834,7 @@ strong:hover {
         bottom: -0.2em;
         padding: 1em;
     }
+    
     .home1 {
         position: absolute;
         font-size: medium;
@@ -717,238 +842,300 @@ strong:hover {
         left: 13em;
         padding: 1em;
     }
+    
     #containerhead a.register:hover {
         border-top: hidden;
     }
+    
     #containerhead a.home1:hover {
         border-top: hidden;
         border-bottom: solid #0065FC;
     }
+    
     #containerhead a.home:hover {
         border-top: hidden;
         border-bottom: solid #0065FC;
     }
+    
     .fa-chart-line {
         padding-left: 4em;
     }
 }
-
 @media(max-device-width: 425px) {
     .filtre ul {
         flex-direction: column;
         padding: 0;
         margin-top: 0;
     }
+    
     .filter {
         margin-bottom: 1em;
         margin-right: 6em;
         width: 180px;
     }
+    
     .populaires {
         padding: 0;
         margin-right: 0;
     }
+    
     body {
         margin: 0;
     }
+    
     .Hébergements {
         padding: 0;
     }
+    
     #conteneur1 {
         padding: 0;
     }
+    
     footer {
         padding: 0;
     }
+    
     #block {
         padding: 0;
         margin: 0;
         margin-bottom: 1em;
     }
+    
     .fa-chart-line {
         padding: 0;
         float: right;
         margin-right: 2em;
     }
+    
     #containerhead {
         margin-left: 0;
     }
+    
     .recherche {
         margin-left: 1.5em;
     }
+    
     #site-search {
         width: 240px;
     }
+    
     .populaires h2 {
         margin-left: 2em;
     }
+    
     article.hotel1 {
         margin-left: 0;
     }
+    
     #conteneur2 {
         margin-bottom: 1em;
     }
+    
     #conteneur1 img {
         width: 335px;
     }
+    
     .Hébergements h2 {
         margin-left: 2em;
     }
+    
     article.hotel {
         margin-left: 2.5em;
         margin-bottom: 1em;
     }
+    
     .afficher {
         margin-left: 2.5em;
         margin-top: 1em;
         margin-bottom: 1em;
     }
+    
     .Diverstisements h2 {
         margin-left: 2em;
     }
+    
     #block img {
         width: 335px;
     }
+    
     #block1 {
         padding: 0;
     }
+    
     .block2 article {
         margin: 0;
     }
+    
     .block4 article {
         margin: 0;
     }
+    
     #choix h3 {
         margin-left: 1.5em;
         margin-bottom: 0;
     }
+    
     .fa-map-marker-alt {
         margin-left: 2.6em;
     }
+    
     .recherche {
         margin: 0;
     }
+    
     header h1 {
         margin-left: 2.4em;
     }
+    
     header p {
         margin-left: 3.3em;
     }
 }
-
 @media(max-device-width: 375px) {
     .populaires {
         margin-left: 1.5em;
     }
+    
     .populaires h2 {
         margin-left: 1em;
     }
+    
     .fa-chart-line {
         padding-left: 0;
         padding-right: 1em;
         margin: 0;
     }
+    
     #conteneur2 {
         padding: 0;
         margin-bottom: 1em;
     }
+    
     #footer {
         padding: 0;
     }
+    
     #block {
         width: 100%;
         padding: 0;
         margin: 0;
     }
+    
     .Diverstisements h2 {
         margin-left: 1em;
     }
+    
     .afficher {
         margin: 0;
         margin-left: 1.2em;
         margin-bottom: 1em;
     }
+    
     .Hébergements {
         padding: 0;
     }
+    
     .Hébergements h2 {
         margin-left: 1.2em;
     }
+    
     .populaires {
         padding: 0;
         margin: 0;
         margin-top: 1em;
     }
+    
     .filtre ul {
         padding: 0;
     }
+    
     #site-search {
         width: 230px;
         padding-right: 1em;
     }
+    
     #containerhead {
         margin: 0;
     }
+    
     footer {
         padding: 0;
     }
+    
     body {
         margin: 0;
     }
+    
     .recherche {
         margin: 0;
     }
+    
     #conteneur1 img {
         width: 325px;
     }
+    
     #conteneur1 {
         padding: 0;
     }
+    
     article.hotel1 {
         margin-left: 0.5em;
         margin-bottom: 1em;
     }
+    
     article.hotel {
         margin-bottom: 1em;
         margin-left: 1.5em;
     }
+    
     .infos {
         padding-left: 1.1em;
         margin-bottom: 1em;
     }
+    
     #block1 {
         padding-bottom: 0;
     }
+    
     .block4 article {
         margin-bottom: 0;
     }
+    
     .block2 article {
         margin-bottom: 0;
     }
+    
     .fin {
         margin-left: 0.5em;
     }
+    
     #block {
         margin-bottom: 2em;
     }
+    
     #footer {
         line-height: 1.5em;
     }
+    
     #choix {
         margin-left: 0;
     }
+    
     #choix h3 {
         margin-left: 1.5em;
         margin-bottom: 0;
         margin-top: 0;
     }
+    
     .fa-map-marker-alt {
         margin-left: 1em;
     }
+    
     header h1 {
         margin-left: 1em;
         padding-right: 4em;
     }
+    
     header p {
         margin-left: 1.4em;
     }
