--- a/style.css
+++ b/style.css
@@ -190,18 +190,19 @@ article.hotel p {
     font-size: 20px;
 }
 
-
-}
 header p {
     margin-left: 1.6em;
 }
+
 .recherche {
     margin-left: 1.5em;
 }
+
 .infos {
     margin-left: 2em;
     margin-top: 2em;
 }
+
 .filtre ul {
     list-style-type: none;
     display: flex;
@@ -209,15 +210,18 @@ header p {
     justify-content: flex-start;
     padding: 0;
 }
+
 article.Activités {
     background-color: white;
     box-shadow: 1px 1px 12px rgb(212, 211, 211);
     border-radius: 10px;
 }
+
 #block img {
     border-radius: 10px 10px 0px 0px;
     box-shadow: 1px 1px 1px rgb(212, 211, 211);
 }
+
 #block {
     display: flex;
     justify-content: space-between;
@@ -227,27 +231,33 @@ article.Activités {
     margin-bottom: 1em;
     margin-top: 1em;
 }
+
 article.Activités h3 {
     margin: 1em;
     margin-top: 0.5em;
     padding-bottom: 0.5em;
 }
+
 .Diverstisements h2 {
     margin-left: 2.7em;
     margin-top: -1em;
 }
+
 .block2 article {
     margin-bottom: 2em;
     margin-top: 0em;
 }
+
 .block4 article {
     margin-bottom: 2em;
 }
+
 .star {
     margin-left: 0.5em;
     margin-bottom: 0.5em;
     margin-top: -0.5em;
 }
+
 button {
     background-color: #0065FC;
     color: white;
@@ -256,6 +266,7 @@ button {
     width: 105px;
     border-style: none;
 }
+
 #site-search {
     border-left: none;
     border-right: none;
@@ -267,6 +278,7 @@ button {
     border-color: #F2F2F2;
     padding-left: 1em;
 }
+
 .fa-map-marker-alt {
     border-style: solid;
     width: 25px;
@@ -282,6 +294,7 @@ button {
     border-radius: 10px 0px 0px 10px;
     padding-right: 0.3em;
 }
+
 .fa-money-bill-wave {
     color: #0065FC;
     border: solid;
@@ -291,6 +304,7 @@ button {
     padding: 0.4cm;
     margin-top: -0.4em;
 }
+
 .fa-child {
     color: #0065FC;
     border: solid;
@@ -303,6 +317,7 @@ button {
     padding-top: 0.9em;
     margin-top: -0.2em;
 }
+
 .fa-heart {
     color: #0065FC;
     border: solid;
@@ -312,6 +327,7 @@ button {
     padding: 0.4cm;
     margin-top: -0.4em;
 }
+
 .fa-dog {
     color: #0065FC;
     border: solid;
@@ -321,6 +337,7 @@ button {
     padding: 0.9em;
     margin-top: -0.3em;
 }
+
 .filter {
     border: solid;
     border-radius: 50px 50px 50px 50px;
@@ -333,34 +350,42 @@ button {
     margin-left: 1em;
     padding-bottom: -1cm;
 }
+
 strong {
     margin-left: 0.5em;
 }
+
 #choix {
     margin-left: 2em;
 }
+
 #choix h3 {
     font-size: 16px;
     margin-right: 1em;
 }
+
 header h1 {
     margin-top: 1em;
     margin-left: 1.5em;
     line-height: 0.5em;
 }
+
 header p {
     margin-left: 1.5em;
     line-height: 0.5em;
 }
+
 #containerhead a:hover {
     color: #0065FC;
     text-decoration: underline transparent;
     border-top: solid;
     padding-top: 1em;
 }
+
 #containerhead a {
     color: black;
 }
+
 #containerhead {
     display: flex;
     flex: wrap;
@@ -368,185 +393,169 @@ header p {
     justify-content: space-between;
     margin-top: 1em;
 }
+
 #containerhead img {
     height: 40px;
     margin-left: 1.5em;
 }
+
 body {
     font-family: 'Raleway', sans-serif;
 }
+
 strong:hover {
     color: #0065FC;
 }
+
 .fa-search {
     visibility: hidden;
 }
+
 @media screen and (min-width:1024px) and (max-width:1360px) {
     .Hébergements {
         width: 57%;
         padding: 0;
     }
-    
     .populaires {
         width: 35%;
         padding: 0;
     }
-    
     #conteneur1 img {
         width: 220px;
     }
-    
     .fa-chart-line {
         float: right;
         padding-right: 1.5em;
     }
-    
     article.hotel1 {
         margin-right: 1.4em;
         margin-top: 1.5em;
         margin-bottom: 6.5em;
     }
-    
     #conteneur1 {
         padding: 3em;
         padding-top: 1em;
     }
-    
     #block {
         margin: 2em;
     }
-    
     .fin {
         margin-right: 5em;
     }
-    
     .fin h3 {
         margin-left: 3em;
     }
-    
     .Diverstisements h2 {
         margin-top: 0;
         margin-left: 1.5em;
     }
-    
     .infos {
         margin-left: 2em;
     }
-    
     .filtre ul {
         padding-left: 0;
     }
-    
     .recherche {
         margin-left: 1.5em;
     }
-    
     header p {
         margin-left: 2em;
     }
-    
     header h1 {
         margin-left: 1.5em;
     }
-    
     #containerhead img {
         margin-left: 1.5em;
     }
-    
     footer ul {
         padding-left: 2.5em;
     }
-    
     .Hébergements h2 {
         margin-left: 2em;
     }
 }
+
 @media(max-width: 1024px) {
+    header p {
+        margin-left: 1.7em;
+    }
+    header h1 {
+        margin-left: 1.7em;
+    }
+    .recherche {
+        margin-left: 1.7em;
+    }
     .Hébergements {
         width: 57%;
     }
-    
     .populaires {
         width: 34%;
     }
-    
     #conteneur1 img {
         width: 210px;
         height: 110px;
     }
-    
     .fa-chart-line {
         float: right;
         padding-right: 1em;
     }
-    
     .populaires h2 {
         margin-left: 1em;
     }
-    
     #block1 img {
         width: 230px;
     }
-    
     .block2 img {
         width: 230px;
     }
-    
     .block3 img {
         width: 230px;
     }
-    
     .block4 img {
         width: 230px;
     }
-    
     #block {
         margin-left: 2em;
         margin-right: 2em;
     }
-    
     .fin {
         margin-right: 4em;
     }
-    
     .Diverstisements h2 {
         margin-left: 1.5em;
         margin-bottom: 1em;
         margin-top: 1em;
     }
-    
     #containerhead img {
-        margin-top: 0.5em;
+        margin-top: 1.4em;
     }
-    
     .Hébergements h2 {
         margin-left: 2em;
     }
 }
+
 @media(max-width: 980px) {
     body {
         margin: 0;
     }
-    
     #conteneurs {
         flex-direction: column-reverse;
         width: 100%;
         margin-left: initial;
         padding-left: initial;
     }
-    
     .populaires {
         width: 100%;
         padding-bottom: 1em;
         padding-right: 0;
         margin-right: 0;
     }
-    
     #conteneur1 {
         margin-left: 3em;
         padding: 0;
+        margin: 2em;
+        margin-bottom: 1em;
     }
-    
     .Hébergements {
         margin: inherit;
         width: 100%;
@@ -554,7 +563,6 @@ strong:hover {
         background-color: transparent;
         padding: 0;
     }
-    
     article.hotel1 {
         box-shadow: 1px 1px 12px rgb(212, 211, 211);
         width: 337px;
@@ -562,52 +570,40 @@ strong:hover {
         margin-top: 0.1em;
         margin-bottom: 1em;
     }
-    
     #conteneur1 img {
-        width: 325px;
+        width: 300px;
         height: 110px;
     }
-    
     article.hotel {
-        margin-right: auto;
-        margin-left: 1.4em;
+        margin-right: 0.5em;
+        margin-left: 0.5em;
     }
-    
     .Hébergements h2 {
-        margin-left: 3em;
+        margin-left: 2.5em;
     }
-    
     .afficher {
-        margin-left: 4em;
+        margin-left: 3.5em;
     }
-    
     #block {
         padding: 0;
-        margin-left: 3em;
     }
-    
     #block img {
-        width: 325px;
+        width: 300px;
         height: 110px;
     }
-    
     #block1 {
         padding: 0;
-        margin-left: 1.5em;
+        margin-left: 0.5em;
     }
-    
     .block2 {
-        margin-right: 7em;
+        margin-right: 0.5em;
     }
-    
     .block3 {
-        margin-left: 1.5em;
+        margin-left: 0.5em;
     }
-    
     .block4 {
-        margin-right: 7em;
+        margin-right: 0.5em;
     }
-    
     footer {
         flex-direction: column;
         width: 100%;
@@ -615,35 +611,29 @@ strong:hover {
         padding-right: 0;
         margin-left: auto;
     }
-    
     footer ul {
         margin-left: 1em;
         display: initial;
         flex-direction: column;
     }
-    
     .populaires img {
         width: 140px;
         height: 140px;
     }
-    
     .populaires h2 {
-        margin-left: 3.3em;
+        margin-left: 2.7em;
         margin-bottom: 1em;
         margin-top: 1em;
     }
-    
     .fa-chart-line {
         float: right;
         padding-right: 4em;
     }
-    
     .fin {
         margin-left: 4.5em;
         margin-bottom: 1em;
         line-height: 1.5em;
     }
-    
     .fin h3 {
         margin-right: 1em;
         padding: 0;
@@ -651,14 +641,12 @@ strong:hover {
         margin-bottom: -0.5em;
         font-size: medium;
     }
-    
     .infos {
         margin-top: 3em;
         margin: inherit;
         margin-top: 2em;
-        padding-left: 4.1em;
+        padding-left: 1em;
     }
-    
     .fa-search {
         visibility: visible;
         border: solid;
@@ -668,136 +656,133 @@ strong:hover {
         padding: 1.2em;
         border-radius: 17px;
     }
-    
     button {
         display: none;
     }
-    
     #site-search {
         width: 240px;
         height: 35px;
         border-right: none;
     }
-    
     strong {
         font-size: small;
     }
-    
     .star2 {
         margin-top: 1.5em;
     }
-    
     .Diverstisements {
         width: 100%;
     }
-    
     .Diverstisements h2 {
-        margin-left: 3em;
+        margin-left: 2.5em;
     }
-    
     .filtre ul {
         width: 100%;
         padding: 0;
     }
-    
     .filter {
         display: list-item;
     }
-    
     .recherche {
         width: 100%;
         padding-bottom: 0.5em;
         padding-top: 1em;
         margin: 0;
     }
-    
     .fa-map-marker-alt {
         padding-left: 1em;
         padding-bottom: 1.1em;
         padding-top: 0.6em;
-        margin-left: 3.9em;
+        margin-left: 0.9em;
         padding-right: 0.1em;
         border-radius: 12px 0px 0px 12px;
     }
-    
     header {
         width: 100%;
     }
-    
     header h1 {
-        margin-left: 3em;
+        margin-left: 0.6em;
         padding-right: 1em;
         font-size: larger;
     }
-    
     header p {
-        margin-left: 4.2em;
+        margin-left: 1em;
     }
-    
     #choix h3 {
-        margin-left: 2.1em;
+        margin-left: 0;
     }
-    
     #containerhead img {
         margin-top: 0.5em;
-        margin-left: 3.5em;
+        margin-left: 0.7em;
+    }
+    #choix {
+        margin-left: 1em;
     }
 }
+
 @media(max-width: 768px) {
+    .infos {
+        margin-left: 0.2em;
+    }
+    .fin {
+        margin-left: 1.5em;
+    }
+    .Diverstisements h2 {
+        margin-left: 1.2em;
+    }
+    .afficher {
+        margin-left: 1.5em;
+        margin-bottom: 1em;
+    }
+    .Hébergements h2 {
+        margin-top: 0;
+        margin-left: 1.3em;
+    }
+    .populaires h2 {
+        margin-left: 1em;
+    }
     #conteneur1 img {
         width: 300px;
     }
-    
     #conteneur1 {
         margin-left: 0;
+        margin: 1em;
     }
-    
     .fa-chart-line {
         padding: 0;
         float: right;
+        padding-right: 1em;
     }
-    
     #block {
-        justify-content: center;
+        margin: 1em;
     }
-    
-    nav.home {
-        width: 50%;
-    }
-    
     .populaires {
         padding: 0;
     }
-    
     body {
         margin: 0;
     }
-    
     footer {
         padding: 0;
     }
-    
     .filtre ul {
         padding: 0;
     }
-    
     .recherche {
         margin: 0;
     }
-    
     .fa-map-marker-alt {
-        margin-left: 2.5em;
+        margin-left: 0.8em;
     }
-    
     .Hébergements {
         padding: 0;
     }
-    
     article.hotel1 {
         margin-left: 0.5em;
         margin-right: 0.5em;
     }
 }
+
 @media(max-width: 480px) {
     #containerhead {
         width: 100%;
@@ -809,24 +794,20 @@ strong:hover {
         padding-bottom: 2em;
         border-bottom: 3px solid #F2F2F2;
     }
-    
     #containerhead ul {
         flex-wrap: wrap-reverse;
     }
-    
     header img {
         width: 20%;
         position: absolute;
         left: 1em;
         top: 1.5em;
     }
-    
     .register {
         position: relative;
         bottom: 1em;
         right: 2em;
     }
-    
     .home {
         font-size: medium;
         position: absolute;
@@ -834,7 +815,6 @@ strong:hover {
         bottom: -0.2em;
         padding: 1em;
     }
-    
     .home1 {
         position: absolute;
         font-size: medium;
@@ -842,300 +822,238 @@ strong:hover {
         left: 13em;
         padding: 1em;
     }
-    
     #containerhead a.register:hover {
         border-top: hidden;
     }
-    
     #containerhead a.home1:hover {
         border-top: hidden;
         border-bottom: solid #0065FC;
     }
-    
     #containerhead a.home:hover {
         border-top: hidden;
         border-bottom: solid #0065FC;
     }
-    
     .fa-chart-line {
         padding-left: 4em;
     }
 }
+
 @media(max-device-width: 425px) {
     .filtre ul {
         flex-direction: column;
         padding: 0;
         margin-top: 0;
     }
-    
     .filter {
         margin-bottom: 1em;
         margin-right: 6em;
         width: 180px;
     }
-    
     .populaires {
         padding: 0;
         margin-right: 0;
     }
-    
     body {
         margin: 0;
     }
-    
     .Hébergements {
         padding: 0;
     }
-    
     #conteneur1 {
         padding: 0;
     }
-    
     footer {
         padding: 0;
     }
-    
     #block {
         padding: 0;
         margin: 0;
         margin-bottom: 1em;
     }
-    
     .fa-chart-line {
         padding: 0;
         float: right;
         margin-right: 2em;
     }
-    
     #containerhead {
         margin-left: 0;
     }
-    
     .recherche {
         margin-left: 1.5em;
     }
-    
     #site-search {
         width: 240px;
     }
-    
     .populaires h2 {
         margin-left: 2em;
     }
-    
     article.hotel1 {
         margin-left: 0;
     }
-    
     #conteneur2 {
         margin-bottom: 1em;
     }
-    
     #conteneur1 img {
         width: 335px;
     }
-    
     .Hébergements h2 {
         margin-left: 2em;
     }
-    
     article.hotel {
         margin-left: 2.5em;
         margin-bottom: 1em;
     }
-    
     .afficher {
         margin-left: 2.5em;
         margin-top: 1em;
         margin-bottom: 1em;
     }
-    
     .Diverstisements h2 {
         margin-left: 2em;
     }
-    
     #block img {
         width: 335px;
     }
-    
     #block1 {
         padding: 0;
     }
-    
     .block2 article {
         margin: 0;
     }
-    
     .block4 article {
         margin: 0;
     }
-    
     #choix h3 {
         margin-left: 1.5em;
         margin-bottom: 0;
     }
-    
     .fa-map-marker-alt {
         margin-left: 2.6em;
     }
-    
     .recherche {
         margin: 0;
     }
-    
     header h1 {
         margin-left: 2.4em;
     }
-    
     header p {
         margin-left: 3.3em;
     }
 }
+
 @media(max-device-width: 375px) {
     .populaires {
         margin-left: 1.5em;
     }
-    
     .populaires h2 {
         margin-left: 1em;
     }
-    
     .fa-chart-line {
         padding-left: 0;
         padding-right: 1em;
         margin: 0;
     }
-    
     #conteneur2 {
         padding: 0;
         margin-bottom: 1em;
     }
-    
     #footer {
         padding: 0;
     }
-    
     #block {
         width: 100%;
         padding: 0;
         margin: 0;
     }
-    
     .Diverstisements h2 {
         margin-left: 1em;
     }
-    
     .afficher {
         margin: 0;
         margin-left: 1.2em;
         margin-bottom: 1em;
     }
-    
     .Hébergements {
         padding: 0;
     }
-    
     .Hébergements h2 {
         margin-left: 1.2em;
     }
-    
     .populaires {
         padding: 0;
         margin: 0;
         margin-top: 1em;
     }
-    
     .filtre ul {
         padding: 0;
     }
-    
     #site-search {
         width: 230px;
         padding-right: 1em;
     }
-    
     #containerhead {
         margin: 0;
     }
-    
     footer {
         padding: 0;
     }
-    
     body {
         margin: 0;
     }
-    
     .recherche {
         margin: 0;
     }
-    
     #conteneur1 img {
         width: 325px;
     }
-    
     #conteneur1 {
         padding: 0;
     }
-    
     article.hotel1 {
         margin-left: 0.5em;
         margin-bottom: 1em;
     }
-    
     article.hotel {
         margin-bottom: 1em;
         margin-left: 1.5em;
     }
-    
     .infos {
         padding-left: 1.1em;
         margin-bottom: 1em;
     }
-    
     #block1 {
         padding-bottom: 0;
     }
-    
     .block4 article {
         margin-bottom: 0;
     }
-    
     .block2 article {
         margin-bottom: 0;
     }
-    
     .fin {
         margin-left: 0.5em;
     }
-    
     #block {
         margin-bottom: 2em;
     }
-    
     #footer {
         line-height: 1.5em;
     }
-    
     #choix {
         margin-left: 0;
     }
-    
     #choix h3 {
         margin-left: 1.5em;
         margin-bottom: 0;
         margin-top: 0;
     }
-    
     .fa-map-marker-alt {
         margin-left: 1em;
     }
-    
     header h1 {
         margin-left: 1em;
         padding-right: 4em;
     }
-    
     header p {
         margin-left: 1.4em;
     }
