--- a/style.css
+++ b/style.css
@@ -703,7 +703,7 @@ strong:hover {
     header h1 {
         margin-left: 0.6em;
         padding-right: 1em;
-        font-size: larger;
+        line-height: 1em;
     }
     header p {
         margin-left: 1em;
@@ -721,6 +721,10 @@ strong:hover {
 }
 
 @media(max-width: 768px) {
+    .filter {
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+    }
     .infos {
         margin-left: 0.2em;
     }
@@ -781,6 +785,42 @@ strong:hover {
         margin-left: 0.5em;
         margin-right: 0.5em;
     }
+    #containerhead nav {
+        flex-wrap: wrap-reverse;
+        justify-content: flex-end;
+        width: 100%;
+    }
+    #containerhead {
+        width: 100%;
+    }
+    #containerhead a {
+        width: 50%;
+        margin-right: unset;
+        padding: 1em 0;
+        text-align: center;
+    }
+    header img {
+        width: auto;
+        position: absolute;
+        left: 1em;
+    }
+    #containerhead a.menu3:hover {
+        border-top: hidden;
+    }
+    #containerhead a.menu1:hover {
+        border-top: hidden;
+        border-bottom: solid #0065FC;
+    }
+    #containerhead a.menu2:hover {
+        border-top: hidden;
+        border-bottom: solid #0065FC;
+    }
+    #containerhead a.menu2 {
+        border-bottom: solid #F2F2F2;
+    }
+    #containerhead a.menu1 {
+        border-bottom: solid #F2F2F2;
+    }
 }
 
 @media(max-width:680px) {
@@ -789,56 +829,25 @@ strong:hover {
     }
 }
 
+@media(max-width:648px) {
+    #block {
+        justify-content: center;
+    }
+    #block1 {
+        margin-right: 0.5em;
+    }
+    .block2 {
+        margin-left: 0.5em;
+    }
+    .block3 {
+        margin-right: 0.5em;
+    }
+    .block4 {
+        margin-left: 0.5em;
+    }
+}
+
 @media(max-width: 480px) {
-    #containerhead {
-        width: 100%;
-        flex-direction: row-reverse;
-        position: relative;
-        margin: auto;
-        margin-left: 2em;
-        padding-top: 2em;
-        padding-bottom: 2em;
-        border-bottom: 3px solid #F2F2F2;
-    }
-    #containerhead ul {
-        flex-wrap: wrap-reverse;
-    }
-    header img {
-        width: 20%;
-        position: absolute;
-        left: 1em;
-        top: 1.5em;
-    }
-    .register {
-        position: relative;
-        bottom: 1em;
-        right: 2em;
-    }
-    .home {
-        font-size: medium;
-        position: absolute;
-        left: 2em;
-        bottom: -0.2em;
-        padding: 1em;
-    }
-    .home1 {
-        position: absolute;
-        font-size: medium;
-        bottom: -0.2em;
-        left: 13em;
-        padding: 1em;
-    }
-    #containerhead a.register:hover {
-        border-top: hidden;
-    }
-    #containerhead a.home1:hover {
-        border-top: hidden;
-        border-bottom: solid #0065FC;
-    }
-    #containerhead a.home:hover {
-        border-top: hidden;
-        border-bottom: solid #0065FC;
-    }
     .fa-chart-line {
         padding-left: 4em;
     }
